# RAG-Pipeline

./: .gitignore  INTEGRATION_GUIDE.md  PROJECT_COMPLETE_DOCUMENTATION.txt  README.md  README_INTEGRATION.md  SAP iFlow RAG Pipeline.txt  SETUP.md  bash.exe.stackdump  debug_frontend_connection.py  quick_test.py  test_integration.py
Check_Key/: Gen.py  test_neo4j.py  test_openai_key.py
RAG_Front/: README.md  package-lock.json
RAG_Front/web/: Dockerfile  index.html  package.json  postcss.config.cjs  tsconfig.json
rag_generation_pipeline/: FULL_EXPORT.txt  README.md  requirements.txt  run.sh
rag_generation_pipeline/app/: config.py  llm_router.py  main.py  models.py  prompts.py  retriever_client.py  routes.py  service.py  utils.py
rag_generation_pipeline/tests/: test_endpoints.py  test_prompts.py  test_validation.py
rag_pipeline/: CLEANUP_LIST.txt  README_USAGE.md  UI_INTEGRATION_GUIDE.txt  package-lock.json  package.json  requirements.txt  run.sh  start_server.py
rag_pipeline/app/: agentic_rag_service.py  config.py  generator_service.py  knowledge_graph_service.py  llm_router.py  main.py  models.py  prompts.py  routes.py  (+4 more)
retrival sys (cobert)/: FULL_EXPORT.txt  README.md  demo.py  pyproject.toml
retrival sys (cobert)/data/docs/: example.txt
retrival sys (cobert)/src/: cli.py  config.py
retrival sys (cobert)/src/application/: app.py
retrival sys (cobert)/src/rerank/: feedback.py  rerank.py
retrival sys (cobert)/src/retrieval/: embedder.py  search.py
retrival sys (cobert)/src/utils/: chunk.py
retrival sys (cobert)/src/vendors/: supabase_client.py
(+40 files in other folders)
